--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@ html, body {
   background-color: black;
   font-family: monospace, sans-serif;
   font-size: 20px;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 8px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -10,15 +18,23 @@ html, body {
   }
 }
 
+.container {
+  width: 100%;
+  height: 100%;
+}
+
 .content {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   position: absolute;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  padding-top: 20px;
+  padding-bottom: 20px;
   top: 0;
-  right: 0;
-  bottom: 0;
   left: 0;
   text-align: center;
   overflow: hidden;
@@ -860,7 +876,6 @@ rotatedtxt css
 .socials {
   display: flex;
   margin-top: auto;
-  margin-bottom: 20px;
   color: #fff
 }
 
