--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
 
 .logo-box:hover .logo-glitch {
   opacity: 1;
-  transform: scale(1.01);
+  /* transform: scale(1.01); */
 }
 
 .logo {
@@ -123,7 +123,7 @@ body {
 }
 
 .logo-glitch.visible {
-  transform: scale(1.01);
+  /* transform: scale(1.01); */
   opacity: 1;
 }
 
@@ -356,8 +356,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
