--- a/style.css
+++ b/style.css
@@ -891,10 +891,19 @@ rotatedtxt css
 .socials {
   display: flex;
   margin-top: auto;
+  margin-bottom: 10px;
   color: #fff
 }
 
 .social-item {
   margin: 10px;
   color: inherit;
+}
+
+.address {
+  padding: 0 10px;
+  text-align: center;
+  font-size: 12px;
+  color: #fff;
+  opacity: .5
 }
