--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html, body {
   background-color: black;
-  font-family: monospace, sans-serif;
+  /* font-family: monospace, sans-serif; */
+  font-family: 'Eudoxus Sans', sans-serif;
   font-size: 20px;
   width: 100%;
   height: 100%;
@@ -631,7 +632,7 @@ rotatedtxt css
 }
 
 .rotatingText-adjective {
-  font-family: monospace;
+  /* font-family: monospace; */
   font-size: 40px;
   font-weight: 600;
   left: 0;
@@ -995,12 +996,17 @@ rotatedtxt css
   }
 
   .headline {
+    padding-right: 10px;
+    padding-left: 10px;
     margin-top: 20px;
     margin-bottom: 20px;
   }
 
   .hidden-headline {
+    padding-right: 10px;
+    padding-left: 10px;
     font-size: 25px;
+    font-weight: 600;
   }
 
   .summary {
