--- a/style.css
+++ b/style.css
@@ -38,33 +38,97 @@ body {
   color: #222;
 }
 
-.nav {
+.hero-container {
+  min-height: initial;
+  height: 100%;
+}
+
+.header {
+  display: flex;
+  align-items: center;
   position: fixed;
-  mix-blend-mode: difference;
-  /* background-color: #000; */
-  padding: 20px;
   top: 0;
   left: 0;
   right: 0;
   z-index: 1000;
-  /* margin-left: auto; */
-  color: #fff;
-  text-align: center;
+  color: #CCC5B8;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, .05);
+  /* transition: .2s; */
+  mix-blend-mode: difference;
+}
+
+.header.scrolled {
+  background-color: #000;
+  mix-blend-mode: initial;
+  /* color: #000; */
+  /* transition: .2s; */
+}
+
+.header .particles {
+  opacity: 0;
+  transition: .2s;
+}
+
+.header.scrolled .particles {
+  opacity: 0.3;
+}
+
+.header-logo-box {
+  margin-left: 20px;
+  visibility: hidden;
+  opacity: 0;
+  transition: .2s;
+}
+
+.header-logo {
+  display: block;
+}
+
+.header.scrolled .header-logo-box {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+
+
+.nav {
+  display: flex;
+  position: relative;
+  transition: .2s;
+  padding: 20px;
+  margin-left: auto;
+  margin-right: 50%;
+  transform: translateX(50%);
+}
+
+.header.scrolled .nav {
+  margin-right: 0;
+  transform: translateX(0);
 }
 
 .nav-item {
   /* background-color: rgba(255, 255, 255, 1); */
   border-radius: 20px;
   padding: 5px 10px;
-  color: #fff;
+  color: inherit;
   text-decoration: none;
   /* padding: 0 5px; */
-  opacity: 0.75;
+  /* opacity: 0.95; */
   transition: .2s;
 }
 
 .nav-item:hover {
   opacity: 1;
+}
+
+.arrow-down {
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  right: 0;
+  text-align: center;
+  font-size: 20px;
+  cursor: pointer;
 }
 
 .content {
@@ -136,7 +200,6 @@ body {
   color: #fff;
   transition: .2s linear;
   text-decoration: none;
-  margin-bottom: auto;
 }
 
 .contact.active,
@@ -161,7 +224,6 @@ body {
 
 .logo-box {
   position: relative;
-  margin-top: auto;
   width: 271px;
   height: 94px;
   animation: 
@@ -693,21 +755,21 @@ rotatedtxt css
 
 .rotatingText-adjective:nth-of-type(1) {
           animation-name: rotate;
-          animation-duration: 6.5s;
+          animation-duration: 10s;
           /* animation-delay: 0.5s; */
           animation-iteration-count: infinite;
 }
 
 .rotatingText-adjective:nth-of-type(2) {
           animation-name: rotate-2;
-          animation-duration: 6.5s;
+          animation-duration: 10s;
           /* animation-delay: 1.75s; */
           animation-iteration-count: infinite;
 }
 
 .rotatingText-adjective:nth-of-type(3) {
           animation-name: rotate-last;
-          animation-duration: 6.5s;
+          animation-duration: 10s;
           /* animation-delay: 3s; */
           animation-iteration-count: infinite;
 }
@@ -1268,7 +1330,7 @@ rotatedtxt css
 
 .product-icon {
   font-size: 48px;
-  color: #4a90e2;
+  color: #1C1B1B;
   margin-bottom: 20px;
 }
 
@@ -1286,7 +1348,7 @@ rotatedtxt css
 .product-link {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #4a90e2;
+  background-color: #1C1B1B;
   color: #ffffff;
   text-decoration: none;
   border-radius: 5px;
