--- a/v2/style.css
+++ b/v2/style.css
@@ -44,8 +44,6 @@ body {
 }
 
 .header {
-  display: flex;
-  align-items: center;
   position: fixed;
   top: 0;
   left: 0;
@@ -63,6 +61,13 @@ body {
   /* color: #000; */
   /* transition: .2s; */
 }
+
+.header-inner {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
 
 .header .particles {
   opacity: 0;
@@ -94,8 +99,8 @@ body {
 .nav {
   display: flex;
   position: relative;
-  transition: .2s;
-  padding: 20px;
+  transition: transform .5s ease-in-out .05s, margin-right .5s ease-in-out;
+  padding: 10px 20px;
   margin-left: auto;
   margin-right: 50%;
   transform: translateX(50%);
@@ -127,7 +132,7 @@ body {
   left: 0;
   right: 0;
   text-align: center;
-  font-size: 20px;
+  font-size: 30px;
   cursor: pointer;
 }
 
@@ -191,7 +196,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-shrink: 0;
+  /* flex-shrink: 0; */
   height: 70px;
   box-sizing: border-box;
   padding: 0 40px;
@@ -226,7 +231,11 @@ body {
   position: relative;
   width: 271px;
   height: 94px;
-  animation: 
+  transition: .1s;
+}
+
+.logo-box.scrolled {
+  opacity: 0;
 }
 
 .logo-box:hover .logo-glitch {
@@ -236,14 +245,15 @@ body {
 
 .logo {
   width: 271px;
-  height: 94px;
+  height: 100%;
+  transition: .1s;
 }
 
 
 .logo-glitch {
   position: absolute;
   width: 271px;
-  height: 94px;
+  height: 100%;
   left: 0;
   top: 0;
   /* opacity: 0; */
@@ -482,11 +492,13 @@ body {
 */
 
 .particles {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 10000;
+  pointer-events: none;
   overflow: hidden;
 }
 
@@ -1041,8 +1053,8 @@ rotatedtxt css
 
 /* social */
 .socials {
-  display: flex;
   margin-top: auto;
+  display: flex;
   margin-bottom: 10px;
   color: #fff
 }
@@ -1183,12 +1195,12 @@ rotatedtxt css
 
 /*about*/
 .partners-grid {
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 30px;
   justify-items: center;
   padding: 20px;
-  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -1199,7 +1211,7 @@ rotatedtxt css
   text-align: center;
   background-color: #f8f8f8;
   border-radius: 8px;
-  padding: 20px;
+  padding: 40px 20px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -1209,7 +1221,7 @@ rotatedtxt css
 }
 
 .partner-logo {
-  width: 160px;
+  height: 40px;
   object-fit: contain;
   margin-top: auto;
   margin-bottom: 15px;
@@ -1252,13 +1264,15 @@ rotatedtxt css
 .client-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  /* grid-auto-flow: column; */
   /* grid-auto-rows: 20px; */
   gap: 100px;
   justify-items: center;
   align-items: center;
+  width: 100%;
   padding: 20px;
-  max-width: 1200px;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .client-item {
@@ -1291,11 +1305,13 @@ rotatedtxt css
 
 @media (max-width: 768px) {
   .client-grid {
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    width: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+    gap: 20px;
   }
 
   .client-logo {
-    width: 80px;
+    width: 80%;
     height: 80px;
   }
 
@@ -1356,7 +1372,7 @@ rotatedtxt css
 }
 
 .product-link:hover {
-  background-color: #3a7bc8;
+  /* background-color: #3a7bc8; */
 }
 
 @media (max-width: 768px) {
