--- a/v2/style.css
+++ b/v2/style.css
@@ -1,13 +1,19 @@
-html { scroll-behavior: smooth; }
+* {
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+  background-color: black;
+}
 
 html, body {
-  background-color: black;
+  position: relative;
   /* font-family: monospace, sans-serif; */
   font-family: 'Eudoxus Sans', sans-serif;
   font-size: 20px;
   width: 100%;
   height: 100%;
-  box-sizing: border-box;
 }
 
 body {
@@ -30,7 +36,7 @@ body {
   position: relative;
   width: 100%;
   min-height: 100%;
-  color: #fff;
+  color: #CCC5B8;
 }
 
 .container.light {
@@ -63,8 +69,8 @@ body {
 }
 
 .header-inner {
-  display: flex;
-  align-items: center;
+  /* display: flex; */
+  /* align-items: center; */
   width: 100%;
 }
 
@@ -79,6 +85,8 @@ body {
 }
 
 .header-logo-box {
+  float: left;
+  margin-top: 6px;
   margin-left: 20px;
   visibility: hidden;
   opacity: 0;
@@ -86,7 +94,7 @@ body {
 }
 
 .header-logo {
-  display: block;
+  /* display: block; */
 }
 
 .header.scrolled .header-logo-box {
@@ -97,18 +105,38 @@ body {
 
 
 .nav {
+  float: right;
   display: flex;
   position: relative;
-  transition: transform .5s ease-in-out .05s, margin-right .5s ease-in-out;
+  transition: transform .5s ease-in-out .05s, right .5s ease-in-out;
   padding: 10px 20px;
-  margin-left: auto;
-  margin-right: 50%;
+  right: 50%;
   transform: translateX(50%);
 }
 
-.header.scrolled .nav {
-  margin-right: 0;
-  transform: translateX(0);
+@media (max-width: 768px) {
+  .nav {
+    /* flex-direction: column; */
+    padding: 0;
+  }
+  .nav-item {
+    /* padding: 0!important;
+    text-align: right; */
+  }
+
+  .header-logo-box {
+    float: none;
+    text-align: center;
+    margin-left: 0;
+    margin-top: 0;
+  }
+}
+
+@media (min-width: 769px) {
+  .header.scrolled .nav {
+    right: 0;
+    transform: translateX(0);
+  }
 }
 
 .nav-item {
@@ -146,10 +174,8 @@ body {
   align-items: center;
   justify-content: center;
   flex-grow: 1;
-  box-sizing: border-box;
   width: 100%;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 20px;
   top: 0;
   left: 0;
   /* overflow: hidden; */
@@ -198,11 +224,10 @@ body {
   align-items: center;
   /* flex-shrink: 0; */
   height: 70px;
-  box-sizing: border-box;
   padding: 0 40px;
   font-size: 22px;
-  border: 2px solid #ffff;
-  color: #fff;
+  border: 2px solid #CCC5B8;
+  color: inherit;
   transition: .2s linear;
   text-decoration: none;
 }
@@ -210,7 +235,7 @@ body {
 .contact.active,
 .contact:hover {
   /* background-color: #fff; */
-  border: 5px solid #ffff;
+  border: 5px solid #CCC5B8;
   /* animation: hide-show 1s alternate infinite linear; */
 }
 
@@ -268,7 +293,7 @@ body {
 
 .glitch-filter-example__filtered-text {
   filter: url(#filter);
-  fill: white;
+  fill: #CCC5B8;
   /* font-family: "Share Tech Mono", sans-serif; */
   font-size: 100px;
   text-align: center;
@@ -497,7 +522,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 10000;
+  z-index: -1;
   pointer-events: none;
   overflow: hidden;
 }
@@ -850,7 +875,7 @@ rotatedtxt css
 
 .rotatingText-adjective-inner {
   display: block;
-  color: white;
+  color: #CCC5B8;
   position: relative;
   margin: 0 auto;
 }
@@ -996,7 +1021,7 @@ rotatedtxt css
   text-align: center;
   text-shadow: -1px 0 red;
   top: 0;
-  color: white;
+  color: #CCC5B8;
   background: black;
   overflow: hidden;
   clip: rect(0, 900px, 0, 0);
@@ -1012,7 +1037,7 @@ rotatedtxt css
   left: -2px;
   text-shadow: 1px 0 blue;
   top: 0;
-  color: white;
+  color: #CCC5B8;
   background: black;
   overflow: hidden;
   clip: rect(0, 900px, 0, 0);
@@ -1056,7 +1081,6 @@ rotatedtxt css
   margin-top: auto;
   display: flex;
   margin-bottom: 10px;
-  color: #fff
 }
 
 .social-item {
@@ -1272,7 +1296,6 @@ rotatedtxt css
   width: 100%;
   padding: 20px;
   margin: 0 auto;
-  box-sizing: border-box;
 }
 
 .client-item {
