--- a/v2/style.css
+++ b/v2/style.css
@@ -129,6 +129,11 @@ body {
     text-align: center;
     margin-left: 0;
     margin-top: 0;
+    max-height: 0;
+  }
+
+  .header.scrolled .header-logo-box {
+    max-height: 42px;
   }
 }
 
