--- a/v2/style.css
+++ b/v2/style.css
@@ -35,7 +35,7 @@ body {
   flex-direction: column;
   position: relative;
   width: 100%;
-  min-height: 100%;
+  min-height: 100lvh;
   color: #CCC5B8;
 }
 
