--- a/v2/style.css
+++ b/v2/style.css
@@ -124,30 +124,6 @@ body {
   transform: translateX(50%);
 }
 
-@media (max-width: 768px) {
-  .nav {
-    /* flex-direction: column; */
-    padding: 0;
-  }
-  .nav-item {
-    padding: 5px;
-    /* padding: 0!important;
-    text-align: right; */
-  }
-
-  .header-logo-box {
-    float: none;
-    text-align: center;
-    margin-left: 0;
-    margin-top: 0;
-    max-height: 0;
-  }
-
-  .header.scrolled .header-logo-box {
-    max-height: 42px;
-  }
-}
-
 @media (min-width: 769px) {
   .header.scrolled .nav {
     right: 0;
@@ -179,6 +155,36 @@ body {
   font-size: 30px;
   cursor: pointer;
 }
+
+
+@media (max-width: 768px) {
+  .nav {
+    /* flex-direction: column; */
+    padding: 0;
+  }
+  .nav-item {
+    padding: 5px;
+    /* padding: 0!important;
+    text-align: right; */
+  }
+
+  .header-logo-box {
+    float: none;
+    text-align: center;
+    margin-left: 0;
+    margin-top: 0;
+    max-height: 0;
+  }
+
+  .header.scrolled .header-logo-box {
+    max-height: 22px;
+  }
+
+  .header-logo {
+    max-height: 22px;
+  }
+}
+
 
 .content {
   position: relative;
