--- a/v2/style.css
+++ b/v2/style.css
@@ -158,6 +158,11 @@ body {
 
 
 @media (max-width: 768px) {
+  .header {
+    /* top: 100%; */
+    /* transform: translateY(-100%); */
+  }
+
   .nav {
     /* flex-direction: column; */
     padding: 0;
@@ -1245,7 +1250,6 @@ rotatedtxt css
   align-items: center;
   text-align: center;
   background-color: #f8f8f8;
-  border-radius: 8px;
   padding: 40px 20px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -1398,14 +1402,15 @@ rotatedtxt css
 .product-link {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #1C1B1B;
-  color: #ffffff;
+  border: 2px solid #1C1B1B;
+  color: inherit;
   text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease, border .2s linear;
 }
 
 .product-link:hover {
+  background-color: #1C1B1B;
+  color: #fff;
   /* background-color: #3a7bc8; */
 }
 
