--- a/v2/style.css
+++ b/v2/style.css
@@ -1203,7 +1203,6 @@ rotatedtxt css
 .service-card {
   text-align: left;
   background-color: #f8f8f8;
-  border-radius: 8px;
   padding: 20px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -1370,7 +1369,6 @@ rotatedtxt css
 
 .product-card {
   background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 10px;
   padding: 30px;
   width: 300px;
   text-align: center;
@@ -1390,6 +1388,7 @@ rotatedtxt css
 
 .product-card h3 {
   font-size: 24px;
+  margin-top: 0;
   margin-bottom: 15px;
 }
 
