--- a/v2/style.css
+++ b/v2/style.css
@@ -78,7 +78,6 @@ h1, h2 {
   right: 0;
   z-index: 1000;
   color: #CCC5B8;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, .05);
   /* transition: .2s; */
   /* mix-blend-mode: difference; */
 }
@@ -87,6 +86,17 @@ h1, h2 {
   background-color: #000;
   /* color: #000; */
   /* transition: .2s; */
+}
+
+.header-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+  max-width: 1200px;
+  width: 100%;
+  padding: 20px;
 }
 
 .header-inner {
@@ -145,7 +155,10 @@ h1, h2 {
 .nav-item {
   /* background-color: rgba(255, 255, 255, 1); */
   border-radius: 20px;
-  padding: 5px 10px;
+  margin-right: 10px;
+  margin-left: 10px;
+  padding-top: 5px;
+  margin-bottom: 5px;
   color: inherit;
   text-decoration: none;
   /* padding: 0 5px; */
@@ -155,6 +168,26 @@ h1, h2 {
 
 .nav-item:hover {
   opacity: 1;
+}
+
+.underlineThrough {
+  position: relative;
+}
+
+.underlineThrough:after {
+  content: '';
+  display: block;
+  position: absolute;
+  right: 0;
+  width: 0;
+  height: 2px;
+  background: #CCC5B8;
+  transition: all 0.3s ease;
+}
+
+.underlineThrough:hover:after {
+  left: 0;
+  width: 100%;
 }
 
 .arrow-down {
@@ -179,7 +212,8 @@ h1, h2 {
     padding: 0;
   }
   .nav-item {
-    padding: 5px;
+    margin-right: 5px;
+    margin-left: 5px;
     /* padding: 0!important;
     text-align: right; */
   }
@@ -1449,6 +1483,7 @@ rotatedtxt css
 .footer {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   margin-top: auto;
   padding-top: 20px;
@@ -1467,10 +1502,17 @@ rotatedtxt css
 }
 
 .footer-logo-box {
+  margin-bottom: 10px;
 }
 
 .footer-logo {
   height: 30px;
+}
+
+@media (max-width: 768px) {
+  .footer-logo {
+    height: 20px;
+  }
 }
 
 /* social */
