--- a/v2/style.css
+++ b/v2/style.css
@@ -96,6 +96,8 @@ h1, h2 {
   flex-grow: 1;
   max-width: 1200px;
   width: 100%;
+  margin-right: auto;
+  margin-left: auto;
   padding: 20px;
 }
 
