mobil fix for scroll nav

--- a/v2/style.css
+++ b/v2/style.css
@@ -3,6 +3,12 @@
   scroll-margin-top: 80px;
 }
 
+@media only screen and (max-width: 600px) {
+  * {
+    scroll-margin-top: 60px;
+  }
+}
+
 html {
   scroll-behavior: smooth;
   background-color: black;
@@ -163,7 +169,7 @@ h1, h2 {
   margin-right: 10px;
   margin-left: 10px;
   padding-top: 5px;
-  margin-bottom: 5px;
+  padding-bottom: 5px;
   color: inherit;
   text-decoration: none;
   /* padding: 0 5px; */
