--- a/v2/style.css
+++ b/v2/style.css
@@ -51,6 +51,10 @@ h1, h2 {
 }
 /*  */
 
+.align-center {
+  align-items: center;
+}
+
 .text-center {
   text-align: center;
 }
@@ -65,7 +69,7 @@ h1, h2 {
 
 .container.light {
   background-color: #fff;
-  color: #222;
+  color: #1C1B1B;
 }
 
 .hero-container {
@@ -252,13 +256,12 @@ h1, h2 {
 
 
 .content {
-  position: relative;
+  /* position: relative; */
   max-width: 1200px;
   margin-right: auto;
   margin-left: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   flex-grow: 1;
   width: 100%;
@@ -1241,20 +1244,21 @@ rotatedtxt css
 
 .service-card {
   text-align: left;
-  background-color: #f8f8f8;
+  background: #EAE5DC;
   padding: 20px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .service-card h3 {
-  color: #333;
+  color: #1C1B1B;
   font-size: 18px;
   margin-top: 0;
   margin-bottom: 10px;
 }
 .service-card p {
   color: #666;
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: 300;
   margin: 5px 0;
 }
 
@@ -1346,7 +1350,8 @@ rotatedtxt css
 
 .clients-description {
   max-width: 600px;
-  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .client-grid {
@@ -1357,7 +1362,6 @@ rotatedtxt css
   /* gap: 100px; */
   /* align-items: center; */
   width: 100%;
-  padding: 20px;
   margin: 0 auto;
 }
 
@@ -1413,22 +1417,58 @@ rotatedtxt css
   }
 }
 
+/* what sets apart */
+.features-box {
+  display: flex;
+  margin-top: 100px;
+}
+
+.features-image {
+  width: 50%;
+}
+
+.features-image svg {
+  position: absolute;
+  left: 0;
+  max-width: 50vw;
+}
+
+.features-content {
+  width: 50%
+}
+
+.features-content h2 {
+  margin-bottom: 16px;
+}
+
+.feature-item {
+  margin-bottom: 20px;
+}
+
+.feature-item h4 {
+  /* margin-top: 10px; */
+  margin-bottom: 8px;
+}
+
+.feature-item p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 
 /*products*/
 .product-showcase {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
-  padding: 20px;
+  margin-top: 20px;
 }
 
 .product-card {
   display: flex;
+  width: 400px;
   flex-direction: column;
   background: rgba(217, 217, 217, 0.20);
   padding: 30px;
-  width: 300px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
