--- a/creator/assets/css/style.css
+++ b/creator/assets/css/style.css
@@ -1369,22 +1369,23 @@ img{
 	color: #fff;
 }
 .wicon {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	width: 80px;
 	height: 80px;
 	line-height: 80px;
 	background: #0D5FF9;
-	display: inline-block;
+	margin-left: auto;
+	margin-right: auto;
 	margin-bottom: 45px;
 	border: 3px solid #fff;
 	border-radius: 8px;
 	transform: rotate(50deg);
 }
-.single-work svg{
+.single-work img{
 	width: 40px;
 	transform: rotate(-50deg);
-}
-.single-work svg path{
-	fill: #fff;
 }
 
 
